--- a/views/undangan.ejs
+++ b/views/undangan.ejs
@@ -130,6 +130,7 @@ body {
             display: block;
             width: 200%;
             height: 250px;
+            overflow: hidden;
         }
 
         .wave1 { bottom: -5px; }
